vm service ssh  docker file corrigee